--- a/src/styles/flex.scss
+++ b/src/styles/flex.scss
@@ -19,6 +19,12 @@
 .justify-end{
   justify-content: flex-end;
 }
+.justify-self-end{
+  margin-left: auto;
+}
 .align-center{
   align-items: center;
+}
+.align-self-start{
+  align-self: flex-start;
 }
