--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,6 +26,13 @@ body,ul{
   padding: 0;
 }
 
+ol, ul, li {
+  padding: 0;
+  margin: 0;
+  display: block;
+  list-style: none;
+}
+
 :root {
   --gray-1:rgba(0,0,0,0.1);
   --gray-2:rgba(0,0,0,0.2);
